...
    }
  }

  String get label {
    switch (this) {
      case AccountType.cash:
        return 'Bolsa';
      case AccountType.debit:
        return 'Débito';
      case AccountType.credit:
        return 'Crédito';
    }
  }
...
